[tool.poetry]
name = "badwing"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
arcade = "==3.0.0.dev20"
#arcade = {git = "https://github.com/pythonarcade/arcade.git", rev = "development"}
click = "^8.0.1"
PyGLM = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
badwing = 'badwing.command:cli'
